feat#29: 디 엔드 오브 파이널 라스트댄스 테스트코드 파일 삭제